Fixed spacing issue w buttons

--- a/src/index.css
+++ b/src/index.css
@@ -582,7 +582,7 @@ div.sticky {
 
 
 .google-button {
-  margin-top: 20px;
+  margin: auto;
   margin-bottom: 20px;
   padding: 50px 150px 50px 150px;
   width: 500px;
@@ -610,8 +610,7 @@ div.sticky {
 }
 
 .facebook-button {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: auto;
   padding: 50px 150px 50px 150px;
   width: 500px;
   height: 50px;
@@ -630,7 +629,6 @@ div.sticky {
 }
 .facebook-icon {
   position: absolute;
-  /*margin-top: 11px;*/
   margin-left: -25px;
   width: 50px;
   height: 50px;
